Verify: Build fixes for Quarkus 3 migration
- Fixed Java version compatibility (Java 11 → 21)
- Added smallrye-reactive-messaging-in-memory dependency
- Added @Broadcast annotation to ordersEmitter for multiple consumers
- Added quarkus-jdbc-h2 dependency for verification testing
- Build succeeds with mvn clean package -Dnet.bytebuddy.experimental=true
- Application starts successfully in ~1 second
- Documented runtime endpoint issues for further investigation
- Updated .konveyor/handoff.md with comprehensive verification report